--- a/programming/index.html
+++ b/programming/index.html
@@ -407,6 +407,7 @@
 <a href="https://andreyex.ru/">andreyex</a>
 
 mkdir folder  // создаем папку
+rm -rf folder_name/ // удаляем папку
 
 ls  // смотреть содержимое папки
 
@@ -499,9 +500,7 @@ public class Home {
     <li><a href="https://ru.wikipedia.org/wiki/CURL">cURL</a></li>
     <li>Apache Kafka / Nginx .webservers</li>
     <li>normalizr</li>
-    <li>SSH</li>
     <li><a href="https://webglfundamentals.org/webgl/lessons/ru/">WebGL (3D в браузере)</a></li>
-    <li>скрамы, канбаны, стендапы, парное программирование</li>
   </ul>
 </div>
 
