--- a/programming/nodejs.html
+++ b/programming/nodejs.html
@@ -178,6 +178,7 @@ got
 </div>
 
 <div>
+	// (function (exports, require, module, __dirname, __filename) {}) <br>
 	<details><summary>Export / Import</summary><pre><code>
 //Export
 module.exports.funcName = function() {};
