--- a/sailing/costume.html
+++ b/sailing/costume.html
@@ -14,15 +14,25 @@
 
 <div><h3>Кюлоты</h3>
     Venetian Breeches or kneed breeches<br>
-    <img src="http://bbprivateer.ca/sites/default/files/images/18thC_clothing_breeches_styles.JPG" alt="18thC_clothing_breeches_styles">
-    <img src="http://bbprivateer.ca/sites/default/files/images/plate_19_14_3.jpeg" alt="plate_19_14_3">
+    <br>
+    <a href="http://bbprivateer.ca/sites/default/files/images/18thC_clothing_breeches_styles.JPG" data-lightbox="1" data-title="">
+        <img src="http://bbprivateer.ca/sites/default/files/images/18thC_clothing_breeches_styles.JPG" alt="18thC_clothing_breeches_styles" height="200">
+    </a>
+    <a href="http://bbprivateer.ca/sites/default/files/images/plate_19_14_3.jpeg" data-lightbox="1" data-title="">
+        <img src="http://bbprivateer.ca/sites/default/files/images/plate_19_14_3.jpeg" alt="plate_19_14_3" height="200">
+    </a>
 </div>
 
 <div><h3>wide kneed breeches</h3>
     "slops", petticoat breeches or wide kneed breeches (skilt)<br>
     похожи на современные кюлоты <br>
-    <img src="http://bbprivateer.ca/sites/default/files/images/slops%20(1).gif" alt="slops%20(1).gif">
-    <img src="http://bbprivateer.ca/sites/default/files/images/typical-sailor(1).png" alt="typical-sailor(1).png">
+    <br>
+    <a href="http://bbprivateer.ca/sites/default/files/images/slops%20(1).gif" data-lightbox="1" data-title="">
+        <img src="http://bbprivateer.ca/sites/default/files/images/slops%20(1).gif" alt="slops%20(1).gif" height="200">
+    </a>
+    <a href="http://bbprivateer.ca/sites/default/files/images/typical-sailor(1).png" data-lightbox="1" data-title="">
+        <img src="http://bbprivateer.ca/sites/default/files/images/typical-sailor(1).png" alt="typical-sailor(1).png" height="200">
+    </a>
 </div>
 
 <div>
