--- a/13century/warband.html
+++ b/13century/warband.html
@@ -18,10 +18,10 @@
 <div>
     <h3>culture_mamluke</h3>
     scripts: <br>
-    faction_tier (рекруты в деревнях)
-    faction_town_walker (население города)
-    faction_village_walker (население деревень)
-    faction_guard (городская стража)
+    faction_tier (рекруты в деревнях)<br>
+    faction_town_walker (население города)<br>
+    faction_village_walker (население деревень)<br>
+    faction_guard (городская стража)<br>
 </div>
 
 <div>
@@ -47,10 +47,12 @@
     </details>
     <details>
         <summary>module_troops.py</summary>
-        kingdom_42_lord (1)<br>
-        knight_42_1 <br>
-        kingdom_42_lady_1 <br>
-        merchant_kingdom_42 (1)<br>
+        <div>
+            kingdom_42_lord (1)<br>
+            knight_42_1 <br>
+            kingdom_42_lady_1 <br>
+            merchant_kingdom_42 (1)<br>
+        </div>
     </details>
 </div>
 <div>
