--- a/13century/index.html
+++ b/13century/index.html
@@ -46,8 +46,9 @@
   <a href="http://oldraremaps.narod.ru/index.html">oldraremaps</a><br>
   <a href="https://cont.ws/@adeptdao/725192">adeptdao</a><br>
 </div>
+
 <div>
-  <a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B8_%D0%A1%D1%8F"><h3>Тангуты ( Си Ся )Western Xia</h3></a> , <a href="https://unidiv-table.com/ru/blocks/tangut/">Тангутское письмо</a><br>
+  <a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B8_%D0%A1%D1%8F"><h3>Тангуты ( Си Ся ) Western Xia</h3></a> , <a href="https://unidiv-table.com/ru/blocks/tangut/">Тангутское письмо</a><br>
 </div>
 
 <div>
@@ -60,11 +61,23 @@
 </div>
 
 <div>
-  <h3>Хорезм</h3><br>
+  <h3><a href="https://dic.academic.ru/dic.nsf/ruwiki/75577">خوارزمشاهیان
+    Xarazmshahiyan</a></h3>
+  хорезмийский, ислам<br>
 Кят<br>
-Гургандж<br>
+  Gurganj<br>
 Баратегин<br>
 Бухара<br>
+  <details>
+    <summary>подробнее</summary>
+    <div>
+      <p>В 1194 году войска хорезмшаха разбивают армию последнего иранского сельджукида Торгул-бека и утверждают суверенитет Хорезма над Ираном; в 1195 г. багдадский халиф Насир терпит поражение в бою с хорезмийцами и признает власть Текеша над восточным Ираком. Успешные походы на восток, против каракитаев, отворяют Текешу дорогу в Бухару.</p>
+      <p>Сын Текеша Ала ад-Дин Мухаммед II в 1200—1220 завершает дело отца. Он отнимает у каракитаев Самарканд и Отрар, простирает свою власть на далекую область Газны на юге Афганистана, подчиняет западный Иран и Азербайджан. Армия Мухаммеда предпринимает поход на Багдад, не удавшийся, впрочем, из-за наступления ранней зимы, закрывшей перевалы, и из-за известий о появлении на восточных границах Хорезмской империи монгольских войск.</p>
+      <p>В 1218 году Чингисхан отправил в Хорезм посольство с предложением о союзе. Хорезмшах Ала ад-Дин Мухаммед II отказался идти на сделку с «неверными» и по предложению правителя Отрара Кайыр хана казнил послов-купцов, отправив их головы хану. Чингисхан потребовал выдачи Кайыр-хана, но в ответ Мухаммед вновь казнил одного из участников следующего монгольского посольства. Весной 1219 года, не окончив завоевания Китая, Чингисхан отправил 200-тысячную армию в Хорезм. Хорезмшах не решился дать генеральное сражение, оставив свою армию разбросанной отдельными отрядами по городам и крепостям всего государства. Один за другим под натиском монголов пали все крупные хорезмские города. Все они были подвергнуты разрушению, а множество хорезмийцев уничтожено. Хорезмшах с остатками армии вначале отступил в свои персидские владения, после чего бежал с небольшим отрядом в прикаспийскую область и скончался на острове Абескун в дельте р. Куры в Каспийском море. Государство Хорезмшахов прекратило своё существование. В то время уровень моря был ниже современного на 2 метра. На острове Абескун находился одноимённый город, росли леса, но и остров и город бесследно исчезли — уже в 1304 году Абескун был под водой. Сын хорезмшаха Джелал ад-Дин Мангуберды продолжал борьбу с монголами до 1231 года. Он дважды разгромил войско монголов на территории современного Афганистана, но был разбит самим Чингисханом в битве при Инде. Джелал ад-Дин Мангуберды погиб в 1231 году в Закавказье. Последним потомком рода хорезмшахов-ануштегинидов был Сайф-ад-дин Кутуз, которому ненадолго в 1259 году удалось прийти к власти в Египте. Его войска во главе с полководцем Бейбарсом смогли, наконец, остановить монголов в битве при Айн-Джалуте в 1260 году</p>
+    </div>
+  </details>
+  Shah Ala ad-Din Muhammad II <br>
+  Jalal ad-Din Manguberdi <br>
 </div>
 
 <div>
@@ -78,13 +91,29 @@
 </div>
 
 <div>
-  <h3><a href="https://ru.wikipedia.org/wiki/%D0%93%D1%83%D1%80%D0%B8%D0%B4%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D1%83%D0%BB%D1%82%D0%B0%D0%BD%D0%B0%D1%82">Гуридский султанат</a>Ghurid</h3>
+  <h3><a href="https://ru.wikipedia.org/wiki/%D0%93%D1%83%D1%80%D0%B8%D0%B4%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D1%83%D0%BB%D1%82%D0%B0%D0%BD%D0%B0%D1%82">Гуридский султанат</a>, Ghurid</h3>
+  <h3><a href="https://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%BB%D0%B8%D0%B9%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D1%83%D0%BB%D1%82%D0%B0%D0%BD%D0%B0%D1%82">Делийский султанат</a></h3>
+  язык персидский , ислам<br>
   Чишт<br>
+  <hr>
+  <details>
+    <summary>Multan</summary>
+    <div><br>
+      После смерти первого Мумлюкского Султана Qutb al-Din Aibak в 1210 году Мултан перешел под власть Nasiruddin Qabacha, который в 1222 году успешно отразил попытку вторжения Султана Jalal ad-Din Mingburnu из Хорезмийской империи, истоки которой уходили в Конье-Ургенч в современном Туркменистане.Кабача также отбил 40-дневную осаду города монгольскими войсками, пытавшимися захватить его. После смерти Кабачи в том же году тюркский царь Iltutmish, третий Султан Мамлюкской династии, захватил и затем аннексировал Мултан. Punjabi poet Baba Farid родился в селе Khatwal неподалеку от Мултана в 1200-х годах.
+      <br><br>
+      Карлугиды попытались вторгнуться в Мултан в 1236 году, В то время как монголы попытались захватить город в 1241 году после захвата Лахора - хотя они были отбиты. Затем монголы под командованием Sali Noyan успешно удержали город для выкупа в 1245-6 годах, прежде чем были отбиты султаном Ghiyas ud din Balban, девятым султаном мамлюков. Затем, в 1249 году, Мултан пал перед Карлугидами, но в том же году был захвачен Sher Khan. Затем Мултан был завоеван Izz al-Din Balban Kashlu Khan в 1254 году, прежде чем он восстал против султана Ghiyas ud din Balban в 1257 году и бежал в Ирак, где присоединился к монгольским войскам, снова захватил Мултан и разрушил его городские стены. Монголы вновь предприняли попытку вторжения в 1279 году, но потерпели решительное поражение. Alauddin Khalji из Дели отправил своего брата Ulugh Khan в 1296 году покорять Мултан, чтобы уничтожить оставшихся в живых членов семьи своего предшественника.
+    </div>
+  </details>
+  Lahore<br>
+  <details>
+    <summary>Sialkot</summary>
+    <div>
+      В 1200-х годах Сиалкот был единственным районом западного Пенджаба, которым правил Мамлюкский султанат в Дели.Этот район был захвачен Ghauri prince Yildiz, но в 1217 году был вновь захвачен султаном Iltutmish.Около 1223 года Jalal ad-Din Mingburnu, последний царь Хоразмийской династии Центральной Азии, бежавший от нашествия Чингисхана, ненадолго захватил Сиалкот и Лахор, а затем был изгнан войсками Илтутмиша в сторону Uch Sharif. В XIII веке Imam Ali-ul-Haq, самый почитаемый суфийский воин-святой Сиалкота, прибыл из Аравии, и начал свою миссионерскую деятельность в регионе, который успешно обратил большое количество индусов в ислам, тем самым превратив Сиалкот в преимущественно мусульманский город.
+    </div>
+  </details>
 </div>
 
 <div>
-  <h3><a href="https://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%BB%D0%B8%D0%B9%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D1%83%D0%BB%D1%82%D0%B0%D0%BD%D0%B0%D1%82">Делийский султанат</a></h3>
-  язык персидский , ислам<br>
   <details>
     <summary>Budaun</summary>
     <pre><div>
@@ -99,22 +128,6 @@
   Thanesar <br>
   Delhi<br>
   Mathura (очень древний город)<br><br>
-  <hr>
-  <details>
-    <summary>Multan</summary>
-    <div><br>
-  После смерти первого Мумлюкского Султана Qutb al-Din Aibak в 1210 году Мултан перешел под власть Nasiruddin Qabacha, который в 1222 году успешно отразил попытку вторжения Султана Jalal ad-Din Mingburnu из Хорезмийской империи, истоки которой уходили в Конье-Ургенч в современном Туркменистане.Кабача также отбил 40-дневную осаду города монгольскими войсками, пытавшимися захватить его. После смерти Кабачи в том же году тюркский царь Iltutmish, третий Султан Мамлюкской династии, захватил и затем аннексировал Мултан. Punjabi poet Baba Farid родился в селе Khatwal неподалеку от Мултана в 1200-х годах.
-      <br><br>
-  Карлугиды попытались вторгнуться в Мултан в 1236 году, В то время как монголы попытались захватить город в 1241 году после захвата Лахора - хотя они были отбиты. Затем монголы под командованием Sali Noyan успешно удержали город для выкупа в 1245-6 годах, прежде чем были отбиты султаном Ghiyas ud din Balban, девятым султаном мамлюков. Затем, в 1249 году, Мултан пал перед Карлугидами, но в том же году был захвачен Sher Khan. Затем Мултан был завоеван Izz al-Din Balban Kashlu Khan в 1254 году, прежде чем он восстал против султана Ghiyas ud din Balban в 1257 году и бежал в Ирак, где присоединился к монгольским войскам, снова захватил Мултан и разрушил его городские стены. Монголы вновь предприняли попытку вторжения в 1279 году, но потерпели решительное поражение. Alauddin Khalji из Дели отправил своего брата Ulugh Khan в 1296 году покорять Мултан, чтобы уничтожить оставшихся в живых членов семьи своего предшественника.
-    </div>
-  </details>
-  Lahore<br>
-  <details>
-    <summary>Sialkot</summary>
-    <div>
-  В 1200-х годах Сиалкот был единственным районом западного Пенджаба, которым правил Мамлюкский султанат в Дели.Этот район был захвачен Ghauri prince Yildiz, но в 1217 году был вновь захвачен султаном Iltutmish.Около 1223 года Jalal ad-Din Mingburnu, последний царь Хоразмийской династии Центральной Азии, бежавший от нашествия Чингисхана, ненадолго захватил Сиалкот и Лахор, а затем был изгнан войсками Илтутмиша в сторону Uch Sharif. В XIII веке Imam Ali-ul-Haq, самый почитаемый суфийский воин-святой Сиалкота, прибыл из Аравии, и начал свою миссионерскую деятельность в регионе, который успешно обратил большое количество индусов в ислам, тем самым превратив Сиалкот в преимущественно мусульманский город.
-    </div>
-  </details>
 </div>
 
 <div>
@@ -187,6 +200,8 @@
 </div>
 
 <div>
+  Тмутаракань(Матарха)<br>
+  Sari <br>
   <h3><a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B0%D0%BB%D0%B8%D1%86%D0%BA%D0%BE-%D0%92%D0%BE%D0%BB%D1%8B%D0%BD%D1%81%D0%BA%D0%BE%D0%B5_%D0%BA%D0%BD%D1%8F%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%BE">Галицко-Волынское княжество. Galicia–Volhynia</a></h3>
 </div>
 
