flamenco fix menu

--- a/13century/warband.html
+++ b/13century/warband.html
@@ -19,6 +19,8 @@
     <h3>culture_mamluke</h3>
     scripts: <br>
     faction_tier (рекруты в деревнях)<br>
+    faction_tier_1_town_troop (рекруты в городах)<br>
+    faction_tier_1_castle_troop (рекруты в замках)<br>
     faction_town_walker (население города)<br>
     faction_village_walker (население деревень)<br>
     faction_guard (городская стража)<br>
@@ -37,7 +39,7 @@
             :center, spec_mercs2_party_template <br>
             faction_object <br>
             mtf_culture_ <br>
-            ?? faction_adjective <br>
+            faction_adjective <br>
             faction_banner <br>
             slot_troop_banner_scene_prop <br>
             starting_town_faction <br>
