--- a/flamenco/index.html
+++ b/flamenco/index.html
@@ -26,16 +26,16 @@
     
     <div class="headDivTog"><a class="item">Стили Фламенко</a>
       <div>
-<div><a href="#Alegrias">Alegrias</a></div>
-<div><a href="#Bulerias">Bulerias</a></div>
-<div><a href="#Granaina">Granaina</a></div>
-<div><a href="#Malaguena">Malaguena</a></div>
-<div><a href="#Petenera">Petenera</a></div>
-<div><a href="#Seguiriya">Seguiriya</a></div>
-<div><a href="#Solea">Solea</a></div>
-<div><a href="#Tangos">Tangos</a></div>
-<div><a href="#Tarantas">Tarantas</a></div>
-<div><a href="#Tientos">Tientos</a></div>
+<div><a href="#alegrias">Alegrias</a></div>
+<div><a href="#bulerias">Bulerias</a></div>
+<div><a href="#granaina">Granaina</a></div>
+<div><a href="#malaguena">Malaguena</a></div>
+<div><a href="#petenera">Petenera</a></div>
+<div><a href="#seguiriya">Seguiriya</a></div>
+<div><a href="#solea">Solea</a></div>
+<div><a href="#tangos">Tangos</a></div>
+<div><a href="#tarantas">Tarantas</a></div>
+<div><a href="#tientos">Tientos</a></div>
       </div>
     </div>
     <div id="headerBar_toggle">
@@ -49,16 +49,16 @@
 
     <div><a class="item">Стили Фламенко</a>
       <div>
-<div><a href="#Alegrias">Alegrias</a></div>
-<div><a href="#Bulerias">Bulerias</a></div>
-<div><a href="#Granaina">Granaina</a></div>
-<div><a href="#Malaguena">Malaguena</a></div>
-<div><a href="#Petenera">Petenera</a></div>
-<div><a href="#Seguiriya">Seguiriya</a></div>
-<div><a href="#Solea">Solea</a></div>
-<div><a href="#Tangos">Tangos</a></div>
-<div><a href="#Tarantas">Tarantas</a></div>
-<div><a href="#Tientos">Tientos</a></div>
+<div><a href="#alegrias">Alegrias</a></div>
+<div><a href="#bulerias">Bulerias</a></div>
+<div><a href="#granaina">Granaina</a></div>
+<div><a href="#malaguena">Malaguena</a></div>
+<div><a href="#petenera">Petenera</a></div>
+<div><a href="#seguiriya">Seguiriya</a></div>
+<div><a href="#solea">Solea</a></div>
+<div><a href="#tangos">Tangos</a></div>
+<div><a href="#tarantas">Tarantas</a></div>
+<div><a href="#tientos">Tientos</a></div>
       </div>
     </div>
   </div>
