speed up page navigation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ margin-bottom: .5rem;
 <tr>
   <td><a href="sailing/" title="sailing"><img src="icons/sailing.png" alt="sailing"></a></td><td><a href="sailing/"> Паруса</a></td></tr>
 <tr>
-  <td><a href="programming/" title="programming"><img src="icons/programing.png" alt="programming"></a></td><td><a href="programming/"> Программирование</a></td></tr>
+  <td><a href="programming/#programming" title="programming"><img src="icons/programing.png" alt="programming"></a></td><td><a href="programming/#programming"> Программирование</a></td></tr>
 <tr>
   <td><a href="flamenco/" title="flamenco"><img src="icons/flamenco.png" alt="flamenco"></a></td><td><a href="flamenco/"> Фламенко</a></td></tr>
 <tr>
