--- a/13century/index.html
+++ b/13century/index.html
@@ -45,6 +45,7 @@
   <a href="https://gallerix.ru/album/Antique-Maps#w6">gallerix</a><br>
   <a href="http://oldraremaps.narod.ru/index.html">oldraremaps</a><br>
   <a href="https://cont.ws/@adeptdao/725192">adeptdao</a><br>
+  <a href="https://youtu.be/t0jaY70AaeQ">Средневековая Индия</a><br>
 </div>
 
 <div>
@@ -57,6 +58,8 @@
   Ташкент <br>
   Самарканд<br>
   Отрар<br>
+  Кашгар <br>
+   Яркенд <br>
 
 </div>
 
@@ -67,6 +70,7 @@
 Кят<br>
   Gurganj<br>
 Баратегин<br>
+  Хива <br>
 Бухара<br>
   <details>
     <summary>подробнее</summary>
@@ -84,10 +88,10 @@
   <h3>Хорасан</h3>
   Балх<br>
   Герат<br>
-  Газни<br>
   Нишапур<br>
   Тус<br>
   Мерв<br>
+  Данденакан<br>
 </div>
 
 <div>
@@ -95,6 +99,10 @@
   <h3><a href="https://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%BB%D0%B8%D0%B9%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D1%83%D0%BB%D1%82%D0%B0%D0%BD%D0%B0%D1%82">Делийский султанат</a></h3>
   язык персидский , ислам<br>
   Чишт<br>
+  Газни<br>
+  Кабул<br>
+  Кандагар<br>
+  Пешавар<br>
   <hr>
   <details>
     <summary>Multan</summary>
@@ -145,10 +153,6 @@
   язык Маратхи, Моди, Индуизм<br>
   Девагири (Даулатабад)<br>
 </div>
-
-  <div>
-    <h3>Виджаянагар</h3>
-  </div>
 
 <div>
   <h3><a href="https://ru.wikipedia.org/wiki/%D0%90%D0%B9%D1%8E%D0%B1%D0%B8%D0%B4%D1%8B">Султанат Айюбидов. Ayyubid Sultanate(Mamluk Sultanate)</a></h3>
