--- a/programming/programming.html
+++ b/programming/programming.html
@@ -50,9 +50,13 @@
     <li><a href="https://events.yandex.ru/"><img src="https://yastatic.net/s3/distribution/promo/react-yandex-favicon/vv0.1.1/favicons/ru/favicon-32x32.png" alt="events.yandex"> events.yandex</a></li>
     <li><a href="https://corp.mail.ru/ru/press/events/"><img src="https://limg.imgsmail.ru/re/i/apple-touch-icon-114x114-ee8777f5e3.png" alt="corp.mail"> events.mail</a></li>
     <li><a href="https://tech.avito.ru/events/"><img src="https://tech.avito.ru/static/img/favicon.ico" alt="tech.avito"> tech.avito</a></li>
+    <li><a href="https://www.youtube.com/channel/UCSVFz1xIEyOrpbowJjCxdvQ">Kaspersky Tech</a></li>
+    <li><a href="https://www.youtube.com/channel/UCvtjmCNTXsvsi4ZyV-WSUAg/videos">Team Mailru Group</a></li>
+    <li><a href="https://www.youtube.com/channel/UCxKXx-eVWNib87Wst7nv_KQ/videos">GDG Russia</a></li>
 </ul></div>
 
 <div>
+    <a href="https://youtu.be/0Z-EU2jxjkA">Выбрать между PHP и Go просто, достаточно...</a><br>
     <a href="https://youtu.be/NmGGcarGnqU">Автостопом по фронтенду, или Эволюция фреймворков</a><br>
     <a href="https://youtu.be/F2B_rvHwz0g">Эффективное тестирование верстки / Максим Соснов (СКБ Контур)</a><br>
     <a href="https://www.youtube.com/playlist?list=PLfbxrJr-t5mn1fAypCWIVKass-X7ru0iR">FrontendConf Moscow 2019</a><br>
@@ -72,8 +76,9 @@
 <a href="https://www.youtube.com/playlist?list=PLKaafC45L_SThr77Wm716ba3Ca-mOr-xc">Курсы по разработке интерфейсов 2016</a><br>
 </div>
 
-<div>Search
+<div>
   <ul>
+    <li><a href="https://habr.com/ru/company/avito/blog/512146/">на карте несколько тысяч интерактивных объектов без вреда для перформанса</a></li>
     <li><a href="https://multisearch.io/">multisearch.io</a></li>
   </ul>
 </div>
@@ -98,13 +103,17 @@
     <a href="https://youtu.be/EaJHp-c_HVk">WASM Meetup 2019</a><br>
 </div>
 
-<div><h2>AI</h2>
+<div><h2>AI / Data Science</h2>
     ELIZA <br>
     IBM Watson <br>
     <a href="https://youtu.be/BX2M8t5BA3s">Machine Learning &<br>
     Deep Neural Networks<br>
     TensorflowJS</a><br>
     <a href="https://habr.com/ru/company/avito/blog/488936/">Google Colab и TensorflowJS</a><br>
+    <a href="https://github.com/cyrildiagne/ar-cutpaste">ar-cutpaste</a>
+    <a href="https://arcopypaste.app/">arcopypaste.app</a><br>
+    <a href="https://github.com/alievk/avatarify">avatarify</a><br>
+    <a href="https://youtu.be/BVIJgLLXnx8">Вебинар от Валерия Бабушкина для участников Школы 21: Data Science</a><br>
 </div>
 
 <div><h2>Реактивное программирование</h2>
@@ -174,6 +183,7 @@
         <li><a href="https://materialdesignicons.com/">materialdesignicons</a></li>
         <li><a href="https://thenounproject.com/">theNounProject</a></li>
         <li><a href="https://loading.io/">loading.io</a></li>
+        <li><a href="https://www.microsoft.com/design/">Microsoft design</a></li>
         <li><a href="https://anatolykulikov.ru/review/glyphhanger-tool-to-optimize-fonts/">glyphhanger-tool-to-optimize-fonts</a></li>
         <li><a href="https://github.com/bramstein/homebrew-webfonttools">homebrew-webfonttools</a></li>
         <li>Axure - проектирование прототипа сайта/приложения</li>
@@ -308,12 +318,19 @@ ack // умный поиск
     <a href="https://docs.google.com/presentation/d/1qUycUmwT1bk0dFY-kqvGk-tuGtQMj2g_HchUrWXrk3w/mobilepresent?slide=id.p">Как я изучал Flutter @gorniv</a><br>
     <a href="https://youtu.be/qYzydKidbDQ">Flutter Day Russia</a><br>
 </div>
+
 <div class="img32">
+    <h3>Функциональное<br>программирование</h3>
     <a href="https://idris-lang.org/"><img src="https://idris-lang.org/logo/logo-small.png" alt="idris-logo"> </a>
     <a href="https://github.com/edwinb/Idris2">Idris2</a>
     <a href="https://youtu.be/mOtKD7ml0NU" title="youtube">.</a>
     <a href="https://youtu.be/o-7zhrUP3ds" title="youtube2">.</a><br>
     <a href="https://www.haskell.org/"><img src="https://www.haskell.org/img/favicon.ico" alt="Haskell"> Haskell</a><br>
+    Курт Уилл - Программируй на Haskell <br>
+    Окасаки К. - Чисто функциональные структуры данных <br>
+</div>
+
+<div class="img32">
     <h3>Java</h3>
     <ul>
         <li><a href="http://www.jetbrains.com/idea/">IntelliJ IDEA</a></li>
