--- a/programming/python.html
+++ b/programming/python.html
@@ -7,13 +7,12 @@
   <ul>
     <li><a href="https://www.jetbrains.com/pycharm/" title="PyCharm"><svg height="32" width="32" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 70 70"><path fill="#167dff" d="M49.1 11L69.5 28.1 62.2 43 49.8 39.6 39.2 39.6z"></path><path fill="#5be079" d="M28.5 22.1L24.5 43 24.1 50.2 14.2 54.5 0 56 4.3 10.7 29.9 0 45.7 10.4z"></path><path fill="#18d0af" d="M28.5 22.1L30.4 62.5 24 70 0 56 19.7 26.6z"></path><path fill="#a9ec62" d="M54.9 19.1L30.6 19.1 52.1 0z"></path><path fill="#eef64e" d="M70 62.6L48.6 69.9 20.2 61.9 28.5 22.1 31.8 19.1 49.1 17.5 47.5 34.9 61.3 29.6z"></path><g><path fill="#000" d="M13.4 13.4H56.6V56.6H13.4z"></path><path fill="#FFF" d="M17.5 48.5H33.7V51.2H17.5z"></path><path d="M17.3,19.1h7.3c4.3,0,6.9,2.5,6.9,6.2v0.1c0,4.1-3.2,6.3-7.2,6.3h-3V37h-3.9V19.1z M24.4,28.1 c2,0,3.1-1.2,3.1-2.7v-0.1c0-1.8-1.2-2.7-3.2-2.7h-3v5.5H24.4z" fill="#FFF"></path><path d="M33.1,28.1L33.1,28.1c0-5.1,3.8-9.3,9.3-9.3c3.4,0,5.4,1.1,7.1,2.8l-2.5,2.9c-1.4-1.3-2.8-2-4.6-2 c-3,0-5.2,2.5-5.2,5.6V28c0,3.1,2.1,5.6,5.2,5.6c2,0,3.3-0.8,4.7-2.1l2.5,2.5c-1.8,2-3.9,3.2-7.3,3.2C37,37.3,33.1,33.2,33.1,28.1" fill="#FFF"></path></g></svg></a>
         <a href="https://repl.it" title="repl.it"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1156 1156" height="32px" width="32px"><defs><style>.cls-1{isolation:isolate;}.cls-2{fill:#ccc;}.cls-3{fill:#ccc;}</style></defs><g id="Exponent" class="cls-1"><path class="cls-2" d="M1024.5,534.05c1.23,13.58,2.08,27.28,2.08,41.19h0C1026.58,561.33,1025.73,547.64,1024.5,534.05Z"/><path class="cls-2" d="M359,531.68S234.25,991.32,734.26,995.32c156.88-58.4,272.48-201.58,290-374.2,1.21-11.94,1.57-24.12,1.84-36.32.05-3.21.48-6.33.48-9.56,0-13.9-.85-27.61-2.08-41.19C892.4,1054.08,308,850.39,359,531.68Z"/><path class="cls-2" d="M617.54,361.07S152,231.06,159.16,738.68A449.86,449.86,0,0,0,267.65,900.85c2,1.89,4.07,3.68,6.09,5.54a450.17,450.17,0,0,0,42.54,34.67c2.31,1.65,4.48,3.47,6.8,5.08a446.74,446.74,0,0,0,49.11,29.16c4.93,2.54,10,4.86,15,7.23a443.91,443.91,0,0,0,44.85,18.2c3.75,1.28,7.33,2.88,11.13,4.07A444.68,444.68,0,0,0,499,1018c5.71,1,11.48,1.84,17.26,2.64a450,450,0,0,0,59.11,4.59c.76,0,1.49.12,2.25.12,14.92,0,29.65-.8,44.18-2.23C99.46,898.55,298,314.47,617.54,361.07Z"/><path class="cls-2" d="M799,601.8S909.14,137.46,413.36,158.2c-166.25,65.67-283.94,227.43-283.94,417a451.1,451.1,0,0,0,4.61,61C238.37,110.86,832.8,281,799,601.8Z"/><path class="cls-2" d="M560.95,801.62S1027.3,862.5,998.11,419.11C934.64,248.44,770.76,126.62,578,126.62a450.24,450.24,0,0,0-81.35,7.73C1016.29,198.14,881.23,806.16,560.95,801.62Z"/><path class="cls-3" d="M707.46,575.25A125.65,125.65,0,1,1,581.85,449.6,125.64,125.64,0,0,1,707.46,575.25Z"/></g></svg></a></li>
+    <li><a href="https://www.youtube.com/watch?v=ahe3WpBMdm4&list=PLvoBekrlHDgROfUUHMbrrdsy_b2y2V_rj">Python Джедай. 2016 (Хауди Хо)</a></li>
+    <li><a href="https://www.youtube.com/watch?v=VIy3hktYKwE&list=PLvoBekrlHDgT2t0PH1J1VT_Bk2ziEAWMs">Учим Python Kivy. 2018 (Хауди Хо)</a></li>
+    <li><a href="https://www.youtube.com/playlist?list=PLrCZzMib1e9qZwq95WVmGB-acnot5ka4a">Web-технологии. Разработка на DJANGO. 2016</a></li>
+    <li><a href="https://youtu.be/KdZ4HF1SrFs">Алгоритмы на Python 3. Лекция №1</a></li>
     <li><a href="http://wombat.org.ua/AByteOfPython/">A Byte of Python</a></li>
     <li><a href="https://www.mediafire.com/file/ghynhk24dsdndj8">Грокаем Алгоритмы</a></li>
-    <li>JIT (Just In Time)</li>
-    <li><a href="https://www.youtube.com/playlist?list=PLrCZzMib1e9qZwq95WVmGB-acnot5ka4a">Web-технологии. Разработка на DJANGO (осень 2016)</a></li>
-    <li><a href="https://www.youtube.com/watch?v=ahe3WpBMdm4&list=PLvoBekrlHDgROfUUHMbrrdsy_b2y2V_rj">Python Джедай [2016 год] По стандартам США! (Хауди Хо)</a></li>
-    <li><a href="https://www.youtube.com/watch?v=VIy3hktYKwE&list=PLvoBekrlHDgT2t0PH1J1VT_Bk2ziEAWMs">Учим Python Kivy [2018] (Хауди Хо)</a></li>
-    <li><a href="https://youtu.be/KdZ4HF1SrFs">Алгоритмы на Python 3. Лекция №1</a></li>
     <li><img src="https://www.djangoproject.com/favicon.ico" alt=""> <a href="https://www.djangoproject.com/">Django Project.com</a></li>
     <li><img src="http://pypy.org/favicon.ico" alt="" style="height:16px"><a href="http://pypy.org/">PyPy.org</a></li>
     <li><a href="https://github.com/jwasham/coding-interview-university">coding-interview-university</a></li>
@@ -26,14 +25,19 @@
   𝟮: Проект Эйлера: <a href="http://euler.jakumo.org/">http://euler.jakumo.org/</a><br>
   𝟯: Awesome Python: <a href="https://github.com/vinta/awesome-python">https://github.com/vinta/awesome-python</a><br>
   𝟰: Курс по написанию ботов для Telegram: <a href="https://groosha.gitbooks.io/telegram-bot-lessons/content/">https://groosha.gitbooks.io/telegram-...</a><br>
-  <a href="https://youtu.be/ygOiHzZigwI">Как программировать на Python</a><br>
-  <a href="https://youtu.be/BJdhu1EuSQM">Основы Python</a><br>
-  <a href="https://youtu.be/1RmrFPmlJNc">Работа с сетью (TCP)</a>
   <a href="https://github.com/manchenkoff/skillbox-chat">skillbox-chat</a><br>
-  <a href="https://www.youtube.com/results?search_query=%23игра_на_Python">Как создать игру на Python</a><br>
 </div>
 
 <article>
+<pre><code>
+    #bash
+python main.py
+pip
+pip install -U pip
+pip freeze > requirements.txt
+pip install pyTelegramBotApi
+
+</code></pre>
      
   <pre><code>
 a = 1 + 1 # integer
@@ -43,7 +47,70 @@ d = 20//6 # 3 часное
 string = "John" # string
 string = "John" * 2 # JohnJohn
 string = "John" + 2 # error
+
+None # null
+
+'''Многострочный
+комментарий'''
+
+...:
+    pass
+# пустая функция
 </code></pre>
+
+<details>
+    <summary>Dictionary</summary>
+<pre><code>
+# Dictionary
+test = {
+    "key1": "value1",
+    "key2": "value2"
+}
+print(test["key1"])
+if "key2" in test:
+    print()
+if "key3" not in test:
+    print()
+
+test.get("key1", "key is not to find")
+</code></pre>
+</details>
+
+<details>
+    <summary>print(''.format)</summary>
+<pre><code>
+name = 'Jessy'
+age = 21
+
+print('Hello, %s!\nYou are %d years old!' % (name, age))
+print('Hello, {}!\nYou are {} years old!'.format(name, age))
+
+print( '{0}{1}{0}'.format( 'abra', 'cad' ) )
+
+print('{0:*^10}'.format('Jessy'))
+# **Jessy***
+
+human = {
+    'name': 'Jessy',
+    'age': 21
+}
+print( 'Name: {person[name]}\nAge: {person[age]}'.format( person = human ) )
+
+print('{0:*^10}'.format('Jessy')) # **Jessy***
+print('{0:->10}'.format('Jessy')) # -----Jessy
+</code></pre></details>
+
+<details>
+    <summary>string_name.method</summary>
+<pre><code>
+print( ' - '.join([]) )
+print('Hello, Sten'.replace('Sten', input_str))
+string_name.startswith('A') # boolean
+.endswith('')
+.lower() # to lowercase
+.upper() # to uppercase
+string_name.split(',') # []
+</code></pre></details>
 
 <details>
     <summary>преобразование типов</summary>
@@ -117,7 +184,7 @@ for i in range(15):
 </details>
 
 <details>
-    <summary>list, range</summary>
+    <summary>list, range, срез</summary>
 <pre><code>
 users = ["John", "Artur", "Kate"]
 users[0] # John
@@ -129,6 +196,7 @@ users + [4, 5, 6] # ["John", "Artur", "Kate", 4, 5, 6]
 len(users) # длина списка
 max(users) # максимальное значение
 min(users) # минимальное значение
+sum([4, 5, 6])
 
 users.append('Ghbd')
 users.append(7)
@@ -142,7 +210,30 @@ numbers = range(100) # диапазон от 0 до 99
 numbers = range(50, 100) # диапазон от 50 до 99
 numbers = range(0, 101, 2) # 0,2,4,6,...,100
 numbers_list = list(range(100)) # список чисел в диапазоне
+
+# Срез списком [List indexing]
+
+digits = [1, 2, 3, 4, 5, 6, 7, 8]
+digits2 = digits[2:4] # [3, 4]
+digits3 = digits[:3] # [1, 2, 3]
+digits4 = digits[3:] # [4, 5, 6, 7, 8]
+digits5 = digits[::2] # [1, 3, 5, 7]
+digits6 = digits[::-2] # [8, 6, 4, 2]
+digits7 = range(2, 101)[::2] #  четные числа от 2 до 100
 </code></pre>
+</details>
+
+<details>
+    <summary>Кортеж Tuple</summary>
+    <pre><code>
+''' кортежи неизменяемы
+выше производительность чем в списках!'''
+
+names = ("Adam", "Nill", "Eva")
+names = "Adam", "Nill", "Eva" # тоже самое
+
+print(names[0])
+    </code></pre>
 </details>
 
 <details>
@@ -173,6 +264,18 @@ def func_name():
     print()
 
 print( func_name.__doc__ )
+</code></pre>
+</details>
+
+<details>
+    <summary>assert</summary>
+<pre><code>
+def func_name(number):
+    assert number > 0, 'Number should be bigger than 0'
+    print(number)
+
+func_name(-10)
+# AssertionError
 </code></pre>
 </details>
 
@@ -250,6 +353,129 @@ new_user = {
 response = requests.post('https://jsonplaceholder.typicode.com/users', new_user)
 print(response.content)
 ---
-
 </code></pre>
+
+<details>
+    <summary>import, from import</summary>
+<pre><code>
+import random
+
+for i in range(10):
+    print( random.randint(1, 100) )
+--------------
+from random import randint
+
+print( randint(1, 100) )
+--------------
+from random import *
+from math import sqrt, pi
+from math import sqrt as my_sqrt
+</code></pre></details>
+
+<details>
+    <summary>STL</summary>
+<pre><code>
+math
+random
+</code></pre></details>
+
+<details>
+    <summary>try ... except</summary>
+<pre><code>
+try:
+    print(7/0)
+except ZeroDivisionError:
+    print('Поймано исключение Деление по нулю')
+except(NameError, TypeError):
+    print('Поймано исключение')
+except:
+    print('Поймано исключение')
+    или pass
+finally:
+    print('fin')
+
+NameError
+TypeError
+IndexError
+кроме SyntaxError
+
+-----
+
+try:
+    pogoda = 'bad'
+    if pogoda == 'bad':
+        raise TypeError
+except TypeError:
+    print('исключение')
+
+-----
+
+pogoda = 'bad'
+if pogoda == 'bad':
+    raise TypeError('Test')
+
+-----
+
+try:
+    print(7/0)
+except:
+    print('исключение')
+    raise
+
+-----
+
+class ExceptionName(Exception):
+    pass
+
+raise ExceptionName('test')
+</code></pre></details>
+
+<details>
+    <summary>Работа с файлами</summary>
+    <pre><code>
+# r - read
+file = open('test.txt', 'r')
+
+print(file.read()) # весь файл
+print(file.read(6)) # первые 6 символов
+print(file.read(1024 * 100))
+file.readlines() # ['line1/n', 'line2/n',...]
+
+file.close()
+
+# open, read, close
+with open(filename1, 'r') as f:
+    print(f.read())
+
+filename = input('Имя файла: ')
+text = input('Введите текст: ')
+
+# w - write
+file = open(filename, 'w')
+file.write(text)
+file.close()
+
+# a - append
+file = open(filename, 'a')
+file.write(text)
+file.close()
+
+# b - binary mode
+file1 = open(filename1, 'rb')
+file2 = open(filename2, 'wb')
+file3 = open(filename2, 'ab')
+
+------# копирование файлов
+filename2 = 'backup_' + filename1
+
+file1 = open(filename1, 'rb')
+file2 = open(filename2, 'wb')
+
+file2.write(file1.read())
+
+file1.close()
+file2.close()
+    </code></pre>
+</details>
+
 </article>
