--- a/programming/react.html
+++ b/programming/react.html
@@ -28,7 +28,7 @@
         <li>* <a href="https://www.youtube.com/playlist?list=PLqKQF2ojwm3n6YO3BDSQIg35GGKn_ImFD">Введение в React Hooks .2019</a></li>
         <li>* <a href="https://youtu.be/Z7_7xvJ7Cjc">React. Иммутабельность данных</a></li>
         <li>* <a href="https://youtu.be/bFVAVXWySzM">React Hooks - зачем придумали</a></li>
-        <li></li>
+        <li><a href="https://youtu.be/I6ypD7qv3Z8">Fullstack React GraphQL TypeScript Tutorial (14 hours)</a></li>
     </ul>
     Доклады:
     <ul>
