--- a/sailing/sailboats/grunvald.html
+++ b/sailing/sailboats/grunvald.html
@@ -3,19 +3,19 @@
 <div id="links">
 	<a href="http://coronet1885.com/">coronet1885.com</a><br>
 	<a href="http://build-sailboats.jimdo.com/"><img src="https://u.jimdo.com/www400/o/sf94b807ca05a574b/img/favicon.png?t=1405124457"> build-sailboats</a> <br>
-	<a href="http://www.barque.ru/projects/1997/yacht_tender_anastasia"><img src="http://www.barque.ru/img/favicon.png"> barque.ru</a> <br>
-	<a href="https://www.youtube.com/channel/UCg-_lYeV8hBnDSay7nmphUA">Sampson Boat Co</a><br>
+	<a href="http://barque.ru/projects/1997/yacht_tender_anastasia"><img src="http://barque.ru/img/favicon.png"> barque.ru</a> <br>
+	<a href="https://youtube.com/channel/UCg-_lYeV8hBnDSay7nmphUA">Sampson Boat Co</a><br>
     <a href="https://journal.tinkoff.ru/krugosvetka-na-yachte/?mindbox-click-id=d6911dd4-f7e5-4e03-afba-a1ef3852565f&utm_source=chemodan&utm_medium=email&utm_campaign=travel-49">Как я купил яхту и отправился в кругосветку</a><br>
     Где искать яхту в интернете:<br>
     <ul>
-        <li><a href="https://www.yachtall.com">yachtall</a></li>
-        <li><a href="https://www.theyachtmarket.com">theyachtmarket</a></li>
-        <li><a href="https://www.boat24.com">boat24</a></li>
+        <li><a href="https://yachtall.com">yachtall</a></li>
+        <li><a href="https://theyachtmarket.com">theyachtmarket</a></li>
+        <li><a href="https://boat24.com">boat24</a></li>
     </ul>
     Yacht Registration:<br>
     <ul>
-        <li><a href="https://www.rya.org.uk/sitecollectiondocuments/legal/Web%20Documents/Legal%20Leaflets/Members%20Advice/Bill%20of%20Sale/BILL%20OF%20SALE.pdf">RYA Bill of Sale</a></li>
-        <li><a href="https://www.delreg.com/yacht-registration-in-delaware.cfm">Yacht Registration in Delaware</a></li>
+        <li><a href="https://rya.org.uk/sitecollectiondocuments/legal/Web%20Documents/Legal%20Leaflets/Members%20Advice/Bill%20of%20Sale/BILL%20OF%20SALE.pdf">RYA Bill of Sale</a></li>
+        <li><a href="https://delreg.com/yacht-registration-in-delaware.cfm">Yacht Registration in Delaware</a></li>
     </ul>
 </div>
 
@@ -75,24 +75,23 @@ LWL:212'/64,7m .Beam:36'/11m .Draft:21'/6,4m<br>
 </div>
 
 <div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Eq0QCISgetM" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rDgKIPaW5xY" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/HepAG8ziOyk" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7Nr1l94igXs" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/QoOd1w0NjWI" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/NtQDbJXh1oY" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/55AxauUemmY" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/5YhdBZ-yXjE" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Wuoy1dGOxFI" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Kmo898WmKfM" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/STPuNXuNKsM" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/WwwkWvqvON4" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mRCIk7s0OTM" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sWIs-9wlaV4" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/yR3fRewvR-M" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ISqflwbq070" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/MCoQ0hHQUj8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/By0ZuT-oGoo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6lq5wAg_Fe4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/kemiaGIwfCU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<a href="https://youtu.be/MjEuYoAnTWk">Строительство фрегата «Штандарт»</a><br>
+<a href="https://youtu.be/Eq0QCISgetM">Building Emma</a><br>
+<a href="https://youtu.be/rDgKIPaW5xY">Fairlie 55 - Video Diary.mov</a><br>
+<a href="https://youtu.be/HepAG8ziOyk">Timelapse film of the building of the Gr</a><br>
+<a href="https://youtu.be/7Nr1l94igXs">Timelapse film of the building of the Gr2</a><br>
+<a href="https://youtu.be/QoOd1w0NjWI">L'Hermione en images</a><br>
+<a href="https://youtu.be/NtQDbJXh1oY">Wooden boatbuilding - Faber Navalis: a film by Maurizio Borriello</a><br>
+<a href="https://youtu.be/55AxauUemmY">Building on Tradition</a><br>
+<a href="https://youtu.be/Wuoy1dGOxFI">wooden boat building</a><br>
+<a href="https://youtu.be/Kmo898WmKfM">Shipbuilding - 1940's British Council Film Collection - CharlieDeanArchives / Archival Footage</a><br>
+<a href="https://youtu.be/STPuNXuNKsM">Huon Kelly - Japanese TV Video</a><br>
+<a href="https://youtu.be/WwwkWvqvON4">Building the Naga Pelangi, a Malay Junk Schooner</a><br>
+<a href="https://youtu.be/mRCIk7s0OTM">Boat building</a><br>
+<a href="https://youtu.be/sWIs-9wlaV4">Chummy Rich: Maine Boat Builder- Dobbs Productions, Bar Harbor,Maine</a><br>
+<a href="https://youtu.be/yR3fRewvR-M">Van boom tot Botter (Building traditional wooden fishing sailboat)</a><br>
+<a href="https://youtu.be/ISqflwbq070">Building Fishing Boats in Vietnam</a><br>
+<a href="https://youtu.be/MCoQ0hHQUj8">Ralph Stanley- An Eye for Wood</a><br>
+<a href="https://youtu.be/By0ZuT-oGoo">Crooked Wood (Στραβά Ξύλα) - The tradition of shipwrights of the Aegean</a><br>
+<a href="https://youtu.be/kemiaGIwfCU">Building the replica of the historical tall-ship La Grace - PR VIDEO</a><br>
 </div>
